# KaratsubaGenerator

./: .gitignore  CMakeLists.txt  README.md  buildProject.sh  main.cpp  test  testProject.sh
generator/: CMakeLists.txt  KaratsubaGen.cpp  KaratsubaGen.h
graph/: BasicType.cpp  BasicType.h  CMakeLists.txt  GraphVertex.cpp  GraphVertex.h  OrientedGraph.cpp  OrientedGraph.h
tests/: CMakeLists.txt  testbench.v  updateTestbench.py
tests/graph/: GraphVertexTests.cpp  OrientedGraphTests.cpp
